Avoid unnecessary call to MakeCurrent

SharedImage backend implementation is careful to restore GL state. The
reason we need to MakeCurrent is to create the texture in the correct
GPU process side share group.

With virtual contexts, we are often current with a different surface. By
skipping the unnecessary MakeCurrent, we avoid stalling GPU main thread
waiting for vblank on Nvidia GPUs (where use_virtualized_gl_contexts is
on by default).

Bug: 894100
Change-Id: Ibaf66ffffbe228d5413a50873e1809d115b86e59
Reviewed-on: https://chromium-review.googlesource.com/c/1320591
Commit-Queue: Jonathan Backer <backer@chromium.org>
Reviewed-by: Antoine Labour <piman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#606103}
Former-commit-id: ce6ad323cd9aa0c49aa7245fe942dc5b9a91e421