gpu/ipc/in_process_command_buffer.cc
@@ -1309,7 +1309,9 @@ void InProcessCommandBuffer::CreateSharedImageOnGpuThread(
     uint32_t usage,
     const SyncToken& sync_token) {
   DCHECK_CALLED_ON_VALID_SEQUENCE(gpu_sequence_checker_);
-  if (!MakeCurrent())
+  // |shared_image_factory_| never writes to the surface, so skip unnecessary
+  // MakeCurrent to mitigate driver bugs. https://crbug.com/457431
+  if (!context_->IsCurrent(nullptr) && !MakeCurrent())
     return;
   LazyCreateSharedImageFactory();
   if (!shared_image_factory_->CreateSharedImage(mailbox, format, size,
@@ -1366,7 +1368,9 @@ void InProcessCommandBuffer::UpdateSharedImageOnGpuThread(
 void InProcessCommandBuffer::DestroySharedImageOnGpuThread(
     const Mailbox& mailbox) {
   DCHECK_CALLED_ON_VALID_SEQUENCE(gpu_sequence_checker_);
-  if (!MakeCurrent())
+  // |shared_image_factory_| never writes to the surface, so skip unnecessary
+  // MakeCurrent to mitigate driver bugs. https://crbug.com/457431
+  if (!context_->IsCurrent(nullptr) && !MakeCurrent())
     return;
   if (!shared_image_factory_ ||
       !shared_image_factory_->DestroySharedImage(mailbox)) {
